--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,58 @@
 .container {
-  padding: 0 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  padding: 8px 16px;
+  background-color: var(--primary);
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  font-size: 1.5rem;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.searchbox {
+  width: 500px;
+  margin-left: auto;
+}
+.searchbox input {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  color: rgba(0, 0, 0, 0.75);
+  padding: 0 16px;
+  border: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.postlist {
+  min-height: 100vh;
+  background: var(--secondary);
+  padding: 16px;
+  margin: 0;
+}
+
+.post {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  color: var(--gray);
+  list-style: none;
+}
+.post a:hover {
+  text-decoration: underline;
+}
+.post__title {
+  color: black;
+}
+.post__name:hover {
+  /* `.post a:hover` has higher specificity than this class declaration, so `important` is required here */
+  text-decoration: none !important;
+}
+.post__url {
+  color: var(--gray-light);
+  font-size: 0.9rem;
+}
+.post__subtitle {
+  font-size: 0.75rem;
 }
