--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +23,15 @@ a {
     color: white;
     background: black;
   }
+} */
+
+:root {
+  --primary: #ff742b;
+  --secondary: #f6f6ef;
+  --gray: #696969;
+  --gray-light: #828282;
+}
+
+body {
+  background: black;
 }
