--- a/styles/HomePostItem.module.css
+++ b/styles/HomePostItem.module.css
@@ -18,6 +18,12 @@
   color: var(--gray-light);
   font-size: 0.9rem;
 }
+.post__url::before {
+  content: "(";
+}
+.post__url::after {
+  content: ")";
+}
 .post__subtitle {
   font-size: 0.75rem;
 }
