--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,4 +34,6 @@ a {
 
 body {
   background: black;
+  /* During Loading state it hides the scroll then it comes back, which creates a flickering effect. So we are keeping the scroll all the time to stop that effect. */
+  overflow-y: scroll;
 }
