feat: add post body
Also previous edge case of post not having title also handled by this

--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -51,6 +51,11 @@
   color: var(--gray);
   margin-bottom: 32px;
 }
+.post__body {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  color: var(--gray);
+}
 
 /* To remove margins from all descendant childrens. Used for `innerHTML` where we can't directly apply CSS. */
 .remove-margin * {
