--- a/styles/Pagination.module.css
+++ b/styles/Pagination.module.css
@@ -12,7 +12,7 @@
 .page__item {
   border: 1px solid;
   padding: 0 10px;
-  /* line-height: 1.5; */
+  line-height: 1.5;
   display: flex;
   justify-content: center;
   align-items: center;
